applications/websites/weather.wesl.io/20-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weatherstation-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weatherstation
  template:
    metadata:
      labels:
        app: weatherstation
    spec:
      imagePullSecrets:
        - name: ghcr-access-token
      containers:
        - name: api
          image: ghcr.io/wesleyklop/weatherstation-api:1
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 33
            runAsGroup: 33
            capabilities:
              drop:
                - ALL
          readinessProbe:
            httpGet:
              path: /api/health
              port: 8080
          livenessProbe:
            httpGet:
              path: /api/health
              port: 8080
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 10m
              memory: 16Mi
          ports:
            - containerPort: 8080
        - name: web
          image: ghcr.io/wesleyklop/weatherstation-web:1
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 33
            runAsGroup: 33
            capabilities:
              drop:
                - ALL
          readinessProbe:
            httpGet:
              path: /
              port: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 10m
              memory: 16Mi
          ports:
            - containerPort: 80
