applications/websites/weather.wesl.io/30-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weatherstation-svc
spec:
  selector:
    app: weatherstation
  ports:
    - protocol: TCP
      name: api
      port: 8080
      targetPort: 8080
    - protocol: TCP
      name: web
      port: 80
      targetPort: 80
