applications/websites/weather.wesl.io/30-ingress-route.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: weatherstation-ingress-route
  namespace: ns-wesley
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`weather.wesl.io`)
      kind: Rule
      services:
        - name: weatherstation-svc
          port: web
    - match: Host(`weather.wesl.io`) && PathPrefix(`/api`)
      kind: Rule
      services:
        - name: weatherstation-svc
          port: api
